--- a/src/assets/zotero.bib
+++ b/src/assets/zotero.bib
@@ -280,6 +280,16 @@
   langid = {english}
 }
 
+@incollection{allen2018framing,
+  title = {Framing and Context},
+  booktitle = {Global {{Warming}} of 1.5{$^\circ$}{{C}}. {{An IPCC Special Report}} on the Impacts of Global Warming of 1.5{$^\circ$}{{C}} above Pre-Industrial Levels and Related Global Greenhouse Gas Emission Pathways, in the Context of Strengthening the Global Response to the Threat of Climate Change, Sustainable Development, and Efforts to Eradicate Poverty},
+  author = {Allen, Myles R. and Dube, Opha Pauline and Solecki, William and {Arag{\'o}n-Durand}, Fernando and Cramer, Wolfgang and Humphreys, Stephen and Kainuma, Mikiko and Kala, Jatin and Mahowald, Natalie and Mulugetta, Yacob and Perez, Rosa and Wairiu, Morgan and Zickfeld, Kirsten},
+  editor = {{Masson-Delmotte}, V. and Zhai, P. and P{\"o}rtner, H.-O. and Roberts, D. and Skea, J. and Shukla, P.R. and Pirani, A. and {Moufouma-Okia}, W. and P{\'e}an, C. and Pidcock, R. and Connors, S. and Matthews, J.B.R. and Chen, Y. and Zhou, X. and Gomis, M.I. and Lonnoy, E. and Maycock, T. and Tignor, M. and Waterfield, T.},
+  year = {2018},
+  pages = {49--92},
+  publisher = {Intergovernmental Panel on Climate Change}
+}
+
 @article{allen2022,
   title = {A Massive {{7T fMRI}} Dataset to Bridge Cognitive Neuroscience and Artificial Intelligence},
   author = {Allen, Emily J. and {St-Yves}, Ghislain and Wu, Yihan and Breedlove, Jesse L. and Prince, Jacob S. and Dowdle, Logan T. and Nau, Matthias and Caron, Brad and Pestilli, Franco and Charest, Ian and Hutchinson, J. Benjamin and Naselaris, Thomas and Kay, Kendrick},
@@ -344,22 +354,6 @@
   number = {4},
   pages = {1647--1665},
   doi = {10.1002/hbm.26164}
-}
-
-@misc{anne2024,
-  title = {Harnessing {{Language}} for {{Coordination}}: {{A Framework}} and {{Benchmark}} for {{LLM-Driven Multi-Agent Control}}},
-  shorttitle = {Harnessing {{Language}} for {{Coordination}}},
-  author = {Anne, Timoth{\'e}e and Syrkis, Noah and Elhosni, Meriem and Turati, Florian and Legendre, Franck and Jaquier, Alain and Risi, Sebastian},
-  year = {2024},
-  month = dec,
-  number = {arXiv:2412.11761},
-  eprint = {2412.11761},
-  primaryclass = {cs},
-  publisher = {arXiv},
-  doi = {10.48550/arXiv.2412.11761},
-  urldate = {2024-12-17},
-  archiveprefix = {arXiv},
-  keywords = {Computer Science - Artificial Intelligence}
 }
 
 @article{anne2025,
@@ -3436,6 +3430,21 @@
   urldate = {2024-06-02}
 }
 
+@article{economist2012complete,
+  title = {Complete Disaster in the Making},
+  author = {{The Economist}},
+  year = {2012},
+  month = sep,
+  journal = {The Economist}
+}
+
+@misc{EEA2017SeaLevel,
+  title = {Global and {{European}} Sea Level Rise},
+  author = {Agency, European Environment},
+  year = {2017},
+  howpublished = {https://www.eea.europa.eu/en/analysis/indicators/global-and-european-sea-level-rise}
+}
+
 @article{effat2022,
   title = {Geospatial Modeling for Selection of Optimum Sites for Hybrid Solar-Wind Energy in {{Assiut Governorate}}, {{Egypt}}},
   author = {Effat, Hala A. and {El-Zeiny}, Ahmed M.},
@@ -5721,6 +5730,29 @@
   doi = {10.1016/j.robot.2022.104096},
   urldate = {2023-11-12},
   langid = {english}
+}
+
+@incollection{IPCC2013_Chapter12,
+  title = {Long-Term Climate Change: {{Projections}}, Commitments and Irreversibility},
+  booktitle = {Climate Change 2013: {{The}} Physical Science Basis. {{Contribution}} of Working Group {{I}} to the Fifth Assessment Report of the Intergovernmental Panel on Climate Change},
+  author = {Collins, Matthew and Knutti, Reto and Arblaster, Julie and Dufresne, Jean-Louis and Fichefet, Thierry and Friedlingstein, Pierre and Gao, Xuejie and Gutowski, William J. and Johns, Tim and Krinner, Gerhard and Shongwe, Mxolisi and Tebaldi, Claudia and Weaver, Andrew J. and Wehner, Michael},
+  editor = {Stocker, Thomas F. and Qin, Dahe and Plattner, Gian-Kasper and Tignor, Melinda and Allen, Simon K. and Boschung, Judith and Nauels, Alexander and Xia, Yu and Bex, Vincent and Midgley, Pauline M.},
+  year = {2013},
+  pages = {1029--1136},
+  publisher = {Cambridge University Press},
+  address = {Cambridge, United Kingdom and New York, NY, USA}
+}
+
+@incollection{IPCC2013SPM,
+  title = {Summary for Policymakers},
+  booktitle = {Climate Change 2013: {{The}} Physical Science Basis. {{Contribution}} of Working Group {{I}} to the Fifth Assessment Report of the Intergovernmental Panel on Climate Change},
+  author = {{Intergovernmental Panel on Climate Change (IPCC)}},
+  editor = {Stocker, T.F. and Qin, D. and Plattner, G.-K. and Tignor, M. and Allen, S.K. and Boschung, J. and Nauels, A. and Xia, Y. and Bex, V. and Midgley, P.M.},
+  year = {2013},
+  pages = {1--30},
+  publisher = {Cambridge University Press},
+  address = {Cambridge, United Kingdom and New York, NY, USA},
+  doi = {10.1017/CBO9781107415324.004}
 }
 
 @article{irie2022,
@@ -8160,6 +8192,20 @@
   keywords = {Data structures (Computer science),Evolutionary programming (Computer science),Genetic algorithms}
 }
 
+@inproceedings{miconi2008,
+  title = {Evosphere: {{Evolutionary}} Dynamics in a Population of Fighting Virtual Creatures},
+  shorttitle = {Evosphere},
+  booktitle = {2008 {{IEEE Congress}} on {{Evolutionary Computation}} ({{IEEE World Congress}} on {{Computational Intelligence}})},
+  author = {Miconi, Thomas},
+  year = {2008},
+  month = jun,
+  pages = {3066--3073},
+  issn = {1941-0026},
+  doi = {10.1109/CEC.2008.4631212},
+  urldate = {2025-05-21},
+  keywords = {Adaptation model,Complexity theory,Evolution (biology),Evolutionary computation,Genetics,Neurons,Sensors}
+}
+
 @misc{mikolov2013,
   title = {Efficient {{Estimation}} of {{Word Representations}} in {{Vector Space}}},
   author = {Mikolov, Tomas and Chen, Kai and Corrado, Greg and Dean, Jeffrey},
@@ -8765,6 +8811,20 @@
   doi = {10.1088/1742-6596/1883/1/012152},
   urldate = {2023-11-12},
   langid = {english}
+}
+
+@misc{NOAA_GWH_2019,
+  title = {Global Warming and Hurricanes},
+  author = {{NOAA Geophysical Fluid Dynamics Laboratory}},
+  year = {2019}
+}
+
+@techreport{noaa2019global,
+  title = {Global Climate Report - December 2019},
+  author = {{NOAA National Centers for Environmental Information}},
+  year = {2019},
+  month = dec,
+  institution = {{National Oceanic and Atmospheric Administration}}
 }
 
 @misc{nociShapedTransformerAttention2023,
@@ -12170,6 +12230,13 @@
   langid = {english}
 }
 
+@book{UNEP2019GlobalLinkages,
+  title = {Global Linkages: A Graphic Look at the Changing Arctic},
+  year = {2019},
+  publisher = {{United Nations Environment Programme and GRID-Arendal}},
+  address = {Nairobi and Arendal}
+}
+
 @misc{vacareanuWordsNumbersYour2024,
   title = {From {{Words}} to {{Numbers}}: {{Your Large Language Model Is Secretly A Capable Regressor When Given In-Context Examples}}},
   shorttitle = {From {{Words}} to {{Numbers}}},
@@ -12570,6 +12637,15 @@
   volume = {170},
   pages = {67--77},
   doi = {10.4204/EPTCS.170.5}
+}
+
+@book{wallace-wells2019uninhabitable,
+  title = {The Uninhabitable Earth: {{Life}} after Warming},
+  author = {{Wallace-Wells}, David},
+  year = {2019},
+  publisher = {Tim Duggan Books},
+  address = {New York},
+  isbn = {978-0-525-57670-9}
 }
 
 @article{wallace2004,
