--- a/slides/zotero.bib
+++ b/slides/zotero.bib
@@ -483,6 +483,24 @@
   file = {/Users/nobr/Zotero/storage/VSYJXNGX/volume.html}
 }
 
+@misc{arbelMLXPFrameworkConducting2024,
+  title = {{{MLXP}}: {{A Framework}} for {{Conducting Replicable Experiments}} in {{Python}}},
+  shorttitle = {{{MLXP}}},
+  author = {Arbel, Michael and Zouaoui, Alexandre},
+  year = {2024},
+  month = jun,
+  number = {arXiv:2402.13831},
+  eprint = {2402.13831},
+  primaryclass = {cs},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.2402.13831},
+  urldate = {2025-07-12},
+  abstract = {Replicability in machine learning (ML) research is increasingly concerning due to the utilization of complex non-deterministic algorithms and the dependence on numerous hyper-parameter choices, such as model architecture and training datasets. Ensuring reproducible and replicable results is crucial for advancing the field, yet often requires significant technical effort to conduct systematic and well-organized experiments that yield robust conclusions. Several tools have been developed to facilitate experiment management and enhance reproducibility; however, they often introduce complexity that hinders adoption within the research community, despite being well-handled in industrial settings. To address the challenge of low adoption, we propose MLXP, an open-source, simple, and lightweight experiment management tool based on Python, available at https://github.com/inria-thoth/mlxp . MLXP streamlines the experimental process with minimal practitioner overhead while ensuring a high level of reproducibility.},
+  archiveprefix = {arXiv},
+  keywords = {Computer Science - Machine Learning,Computer Science - Software Engineering},
+  file = {/Users/nobr/Zotero/storage/2J79HX7Z/Arbel and Zouaoui - 2024 - MLXP A Framework for Conducting Replicable Experiments in Python.pdf;/Users/nobr/Zotero/storage/ESH6SGM5/2402.html}
+}
+
 @misc{arcasComputationalLifeHow2024,
   title = {Computational {{Life}}: {{How Well-formed}}, {{Self-replicating Programs Emerge}} from {{Simple Interaction}}},
   shorttitle = {Computational {{Life}}},
@@ -1544,6 +1562,17 @@
   isbn = {978-1-5106-6200-1 978-1-5106-6201-8},
   langid = {english},
   file = {/Users/nobr/Zotero/storage/LI4C7WXW/Black and Darken - 2023 - Scaling intelligent agent combat behaviors through hierarchical reinforcement learning.pdf}
+}
+
+@misc{blasjoGalileoBadArchimedes2018,
+  title = {Galileo Bad, {{Archimedes}} Good},
+  author = {Blasjo, Viktor},
+  year = {2018},
+  month = nov,
+  number = {1},
+  urldate = {2025-05-08},
+  abstract = {Galileo's bumbling attempts at determining the area of the cycloid suggests a radical new interpretation of his scientific opus. Archimedes's work on floating bodies is an example of excellent Greek science that has not been sufficiently appreciated. Transcript Galileo is the most over},
+  langid = {american}
 }
 
 @article{bocchi2022,
@@ -7374,6 +7403,14 @@
   file = {/Users/nobr/Zotero/storage/JE3WRLS6/Khandelwal et al. - 2023 - Automated deep learning segmentation of high-resolution 7 T postmortem MRI for quantitative analysis of structure-pathology correlations in neurodegenerative diseases.pdf}
 }
 
+@article{khovratovichHowProveFalse,
+  title = {How to {{Prove False Statements}}: {{Practical Attacks}} on {{Fiat-Shamir}}},
+  author = {Khovratovich, Dmitry and Rothblum, Ron D and Soukhanov, Lev},
+  abstract = {The Fiat-Shamir (FS) transform is a prolific and powerful technique for compiling publiccoin interactive protocols into non-interactive ones. Roughly speaking, the idea is to replace the random coins of the verifier with the evaluations of a complex hash function.},
+  langid = {english},
+  file = {/Users/nobr/Zotero/storage/KBHXUML3/Khovratovich et al. - How to Prove False Statements Practical Attacks on Fiat-Shamir.pdf}
+}
+
 @article{kim2023,
   title = {Evidence for the Utility of Quantum Computing before Fault Tolerance},
   author = {Kim, Youngseok and Eddins, Andrew and Anand, Sajant and Wei, Ken Xuan and Van Den Berg, Ewout and Rosenblatt, Sami and Nayfeh, Hasan and Wu, Yantao and Zaletel, Michael and Temme, Kristan and Kandala, Abhinav},
@@ -11171,6 +11208,20 @@
   file = {/Users/nobr/Zotero/storage/35DJNDMF/full-text.pdf}
 }
 
+@misc{pope2013papers,
+  title = {Papers, Please},
+  author = {Pope, Lucas},
+  year = {2013},
+  publisher = {3909 LLC}
+}
+
+@misc{pope2018obra,
+  title = {Return of the Obra Dinn},
+  author = {Pope, Lucas},
+  year = {2018},
+  publisher = {3909 LLC}
+}
+
 @misc{popeHierarchicalReinforcementLearning2021,
   title = {Hierarchical {{Reinforcement Learning}} for {{Air-to-Air Combat}}},
   author = {Pope, Adrian P. and Ide, Jaime S. and Micovic, Daria and Diaz, Henry and Rosenbluth, David and Ritholtz, Lee and Twedt, Jason C. and Walker, Thayne T. and Alcedo, Kevin and Javorsek, Daniel},
@@ -13755,6 +13806,15 @@
   file = {/Users/nobr/Zotero/storage/5QL6SP58/Syrkis and Søgaard - Mechanistic Interpretability and Implementability of Irreducible Integer Identifiers.pdf}
 }
 
+@misc{syrkisParabellum2025,
+  title = {Parabellum},
+  author = {Syrkis, Noah and Anne, Timoth{\'e}e and Risi, Sebastian},
+  year = {2025},
+  month = jun,
+  urldate = {2025-06-30},
+  abstract = {A war game}
+}
+
 @article{szell2022,
   title = {Growing Urban Bicycle Networks},
   author = {Szell, Michael and Mimar, Sayat and Perlman, Tyler and Ghoshal, Gourab and Sinatra, Roberta},
@@ -13874,6 +13934,23 @@
   langid = {english},
   keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language,Computer Science - Machine Learning,Mathematics - Optimization and Control},
   file = {/Users/nobr/Zotero/storage/GCQWSUX2/Tarzanagh et al. - 2023 - Transformers as Support Vector Machines.pdf}
+}
+
+@misc{teamGemma3Technical2025,
+  title = {Gemma 3 {{Technical Report}}},
+  author = {Team, Gemma and Kamath, Aishwarya and Ferret, Johan and Pathak, Shreya and Vieillard, Nino and Merhej, Ramona and Perrin, Sarah and Matejovicova, Tatiana and Ram{\'e}, Alexandre and Rivi{\`e}re, Morgane and Rouillard, Louis and Mesnard, Thomas and Cideron, Geoffrey and Grill, Jean-bastien and Ramos, Sabela and Yvinec, Edouard and Casbon, Michelle and Pot, Etienne and Penchev, Ivo and Liu, Ga{\"e}l and Visin, Francesco and Kenealy, Kathleen and Beyer, Lucas and Zhai, Xiaohai and Tsitsulin, Anton and {Busa-Fekete}, Robert and Feng, Alex and Sachdeva, Noveen and Coleman, Benjamin and Gao, Yi and Mustafa, Basil and Barr, Iain and Parisotto, Emilio and Tian, David and Eyal, Matan and Cherry, Colin and Peter, Jan-Thorsten and Sinopalnikov, Danila and Bhupatiraju, Surya and Agarwal, Rishabh and Kazemi, Mehran and Malkin, Dan and Kumar, Ravin and Vilar, David and Brusilovsky, Idan and Luo, Jiaming and Steiner, Andreas and Friesen, Abe and Sharma, Abhanshu and Sharma, Abheesht and Gilady, Adi Mayrav and Goedeckemeyer, Adrian and Saade, Alaa and Feng, Alex and Kolesnikov, Alexander and Bendebury, Alexei and Abdagic, Alvin and Vadi, Amit and Gy{\"o}rgy, Andr{\'a}s and Pinto, Andr{\'e} Susano and Das, Anil and Bapna, Ankur and Miech, Antoine and Yang, Antoine and Paterson, Antonia and Shenoy, Ashish and Chakrabarti, Ayan and Piot, Bilal and Wu, Bo and Shahriari, Bobak and Petrini, Bryce and Chen, Charlie and Lan, Charline Le and {Choquette-Choo}, Christopher A. and Carey, C. J. and Brick, Cormac and Deutsch, Daniel and Eisenbud, Danielle and Cattle, Dee and Cheng, Derek and Paparas, Dimitris and Sreepathihalli, Divyashree Shivakumar and Reid, Doug and Tran, Dustin and Zelle, Dustin and Noland, Eric and Huizenga, Erwin and Kharitonov, Eugene and Liu, Frederick and Amirkhanyan, Gagik and Cameron, Glenn and Hashemi, Hadi and {Klimczak-Pluci{\'n}ska}, Hanna and Singh, Harman and Mehta, Harsh and Lehri, Harshal Tushar and Hazimeh, Hussein and Ballantyne, Ian and Szpektor, Idan and Nardini, Ivan and {Pouget-Abadie}, Jean and Chan, Jetha and Stanton, Joe and Wieting, John and Lai, Jonathan and Orbay, Jordi and Fernandez, Joseph and Newlan, Josh and Ji, Ju-yeong and Singh, Jyotinder and Black, Kat and Yu, Kathy and Hui, Kevin and Vodrahalli, Kiran and Greff, Klaus and Qiu, Linhai and Valentine, Marcella and Coelho, Marina and Ritter, Marvin and Hoffman, Matt and Watson, Matthew and Chaturvedi, Mayank and Moynihan, Michael and Ma, Min and Babar, Nabila and Noy, Natasha and Byrd, Nathan and Roy, Nick and Momchev, Nikola and Chauhan, Nilay and Sachdeva, Noveen and Bunyan, Oskar and Botarda, Pankil and Caron, Paul and Rubenstein, Paul Kishan and Culliton, Phil and Schmid, Philipp and Sessa, Pier Giuseppe and Xu, Pingmei and Stanczyk, Piotr and Tafti, Pouya and Shivanna, Rakesh and Wu, Renjie and Pan, Renke and Rokni, Reza and Willoughby, Rob and Vallu, Rohith and Mullins, Ryan and Jerome, Sammy and Smoot, Sara and Girgin, Sertan and Iqbal, Shariq and Reddy, Shashir and Sheth, Shruti and P{\~o}der, Siim and Bhatnagar, Sijal and Panyam, Sindhu Raghuram and Eiger, Sivan and Zhang, Susan and Liu, Tianqi and Yacovone, Trevor and Liechty, Tyler and Kalra, Uday and Evci, Utku and Misra, Vedant and Roseberry, Vincent and Feinberg, Vlad and Kolesnikov, Vlad and Han, Woohyun and Kwon, Woosuk and Chen, Xi and Chow, Yinlam and Zhu, Yuvein and Wei, Zichuan and Egyed, Zoltan and Cotruta, Victor and Giang, Minh and Kirk, Phoebe and Rao, Anand and Black, Kat and Babar, Nabila and Lo, Jessica and Moreira, Erica and Martins, Luiz Gustavo and Sanseviero, Omar and Gonzalez, Lucas and Gleicher, Zach and Warkentin, Tris and Mirrokni, Vahab and Senter, Evan and Collins, Eli and Barral, Joelle and Ghahramani, Zoubin and Hadsell, Raia and Matias, Yossi and Sculley, D. and Petrov, Slav and Fiedel, Noah and Shazeer, Noam and Vinyals, Oriol and Dean, Jeff and Hassabis, Demis and Kavukcuoglu, Koray and Farabet, Clement and Buchatskaya, Elena and Alayrac, Jean-Baptiste and Anil, Rohan and Dmitry and Lepikhin and Borgeaud, Sebastian and Bachem, Olivier and Joulin, Armand and Andreev, Alek and Hardin, Cassidy and Dadashi, Robert and Hussenot, L{\'e}onard},
+  year = {2025},
+  month = mar,
+  number = {arXiv:2503.19786},
+  eprint = {2503.19786},
+  primaryclass = {cs},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.2503.19786},
+  urldate = {2025-06-27},
+  abstract = {We introduce Gemma 3, a multimodal addition to the Gemma family of lightweight open models, ranging in scale from 1 to 27 billion parameters. This version introduces vision understanding abilities, a wider coverage of languages and longer context - at least 128K tokens. We also change the architecture of the model to reduce the KV-cache memory that tends to explode with long context. This is achieved by increasing the ratio of local to global attention layers, and keeping the span on local attention short. The Gemma 3 models are trained with distillation and achieve superior performance to Gemma 2 for both pre-trained and instruction finetuned versions. In particular, our novel post-training recipe significantly improves the math, chat, instruction-following and multilingual abilities, making Gemma3-4B-IT competitive with Gemma2-27B-IT and Gemma3-27B-IT comparable to Gemini-1.5-Pro across benchmarks. We release all our models to the community.},
+  archiveprefix = {arXiv},
+  keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language},
+  file = {/Users/nobr/Zotero/storage/BHM6KSSH/Team et al. - 2025 - Gemma 3 Technical Report.pdf;/Users/nobr/Zotero/storage/XLG4EXCS/2503.html}
 }
 
 @article{tenachi2023,
