--- a/talks/zotero.bib
+++ b/talks/zotero.bib
@@ -7710,6 +7710,15 @@
   file = {/Users/nobr/Zotero/storage/GXIJQWUM/Kosmyna et al. - 2025 - Your Brain on ChatGPT Accumulation of Cognitive Debt when Using an AI Assistant for Essay Writing T.pdf}
 }
 
+@inproceedings{koyamada2023pgx,
+  title = {Pgx: {{Hardware-accelerated}} Parallel Game Simulators for Reinforcement Learning},
+  booktitle = {Advances in Neural Information Processing Systems},
+  author = {Koyamada, Sotetsu and Okano, Shinri and Nishimori, Soichiro and Murata, Yu and Habara, Keigo and Kita, Haruka and Ishii, Shin},
+  year = {2023},
+  volume = {36},
+  pages = {45716--45743}
+}
+
 @misc{kozik2021,
   title = {Mimicking {{Playstyle}} by {{Adapting Parameterized Behavior Trees}} in {{RTS Games}}},
   author = {Kozik, Andrzej and Machalewski, Tomasz and Marek, Mariusz and Ochmann, Adrian},
